[package]
name = "orion"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.29"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.10"
sha2 = "0.11"
diffy = "0.4"
walkdir = "2"
base64 = "0.22"
hex = "0.4.3"
